improved CardGroup performance

--- a/finance-web-blog/src/app/components/CardGroup.module.css
+++ b/finance-web-blog/src/app/components/CardGroup.module.css
@@ -18,6 +18,18 @@
   object-fit: cover;
 }
 
+.readMoreButton {
+  transition: all 0.3s ease-in-out;
+}
+
+.cardHover:hover .readMoreButton {
+  background-color: var(
+    --bs-primary
+  ) !important; /* Uses Bootstrap primary color */
+  color: white !important;
+  border-color: var(--bs-primary) !important;
+}
+
 @media (max-width: 768px) {
   .customCard {
     flex-direction: column;
